[gd_scene load_steps=2 format=3 uid="uid://bykanoiiqeula"]

[ext_resource type="Script" path="res://scripts/Components/HealthComponent.gd" id="1_1wesl"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_1wesl")

[node name="Health_Label" type="Label" parent="."]
offset_left = -19.0
offset_top = -29.0
offset_right = 21.0
offset_bottom = -6.0

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
